--- a/homepage.html
+++ b/homepage.html
@@ -7,6 +7,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/lemonmilk');
+    </style>
 
 </head>
 <body>  
@@ -185,6 +188,26 @@
 
     <div class="maps">
         <img src="image/maps us.png" alt="">
+    </div>
+</div>
+
+<div>
+
+    <div class="message"></div>
+    
+    <div id="box">
+        <h4 style="font-family: 'Lemon/Milk bold', sans-serif;" class="reach">REACH OUT TO US</h4>
+        <h1 style="font-family: 'Lemon/Milk bold', sans-serif;" class="Send"> Send Us a Message</h1>
+        <p style="font-family: 'Lemon/Milk bold', sans-serif;" class="glad">We will be glad if you reach out to us.</p>
+    </div>
+    <div id="box1">
+        <form action="">
+            <input id="fullname" type="text" placeholder="Full Name*" required value=""> <input id="email" type="email" placeholder="Email Address*" required value="">
+            <br>
+            <br>
+            <input type="text" placeholder="Message(s)" id="mess" required value="">
+            <button class="sub">Submit</button>
+        </form>
     </div>
 </div>
 
