--- a/homepage.html
+++ b/homepage.html
@@ -115,7 +115,17 @@
     <button class="click--"> Click Here</button>
     <button class="click---"> Click Here</button>
     <button class="click----"> Click Here</button>
-
+    
+    <div class="bus">
+        <img src="image/" alt="">
+    </div>
+    <div>
+        <h1 class="Shuttle">Shuttle Service</h1>
+        <h1 class="City">City Tours</h1>
+        <h1 class="Charter">Charter Bus</h1>
+        <h1 class="More">More Services</h1>
+    </div>
+    
 
 
 </div>
@@ -140,14 +150,6 @@
     </div>
 
     <button class="about-">About Us</button>
-
-
-
-
-
-
-
-
 
 </div>
 
