--- a/homepage.html
+++ b/homepage.html
@@ -126,6 +126,12 @@
         <h1 class="More">More Services</h1>
     </div>
     
+    <div>
+        <p class="shuttle-">We are excited to post contents on the website.</p>
+        <p class="city--">We are excited to post contents on the website.</p>
+        <p class="charter---">We are excited to post contents on the website.</p>
+        <p class="more----">We are excited to post contents on the website.</p>
+    </div>
 
 
 </div>
