--- a/homepage.html
+++ b/homepage.html
@@ -117,7 +117,18 @@
     <button class="click----"> Click Here</button>
     
     <div class="bus">
-        <img src="image/" alt="">
+        <img src="image/bus.png" alt="">
+    </div>
+    <div class="bus--">
+        <img src="image/bus.png" alt="">
+    </div>
+
+    <div class="bus---">
+        <img src="image/bus.png" alt="">
+    </div>
+
+    <div class="bus----">
+        <img src="image/bus.png" alt="">
     </div>
     <div>
         <h1 class="Shuttle">Shuttle Service</h1>
