--- a/log-in.html
+++ b/log-in.html
@@ -34,7 +34,7 @@
                     <button id="createAcct">Create account</button>
                 </div>    
 
-                <input type="submit" name="sign-IN" value="Sign In" href="../log in page/index.css">
+                <input type="submit" name="sign-IN" value="Sign In" href="../FINAL WEBDEV/log-in.html">
             </form>
         </div>
     </div>    
@@ -82,5 +82,5 @@
         </div>
     </div>
 </body>
-<script src="./log in.js"></script>
+<script src="log in.js"></script>
 </html>
