--- a/log-in.html
+++ b/log-in.html
@@ -34,7 +34,7 @@
                     <button id="createAcct">Create account</button>
                 </div>    
 
-                <input type="submit" name="sign-IN" value="Sign In" href="../FINAL WEBDEV/log-in.html">
+                <input type="submit" name="sign-IN" value="Sign In" href="homepage.html">
             </form>
         </div>
     </div>    
