--- a/log-in.html
+++ b/log-in.html
@@ -34,7 +34,7 @@
                     <button id="createAcct">Create account</button>
                 </div>    
 
-                <input type="submit" name="sign-IN" value="Sign In" href="homepage.html">
+                <a href="homepage.html"> <input name="sign-IN" id="submit" value="Sign In"> </a>
             </form>
         </div>
     </div>    
